# claudio

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
codegen/: claudio.g4
codegen/ll1preprocessor/: codegen.py  processed.txt
codegen/ll1preprocessor/dev/: extract_lists.py  find_noterms.py  process_table.py
scripts/: DFA.xlsx  generate_dfa.py  generated_dfa_code.cpp
src/: main.cpp
src/definitions/: characters_maps.hpp
src/dfa/: automata.hpp  automate.cpp  factory.hpp  state.hpp
src/exceptions/: file_not_open.cpp  file_not_open.hpp
src/io/: line.cpp  line.hpp  normalize.cpp  normalize.hpp  nowhitespace.cpp  nowhitespace.hpp  source_file.hpp
src/lexer/: classification.hpp  claudio.cpp  claudio.h  lexer.cpp  lexer.hpp  lexical_analyzer.cpp  lexical_analyzer.hpp  symbol_table.hpp  token.hpp
src/lexer/dfa/: factory.cpp  factory.hpp  state.cpp  state.hpp  state_machine.cpp  state_machine.hpp
src/parser/: common.cpp  common.hpp  parser.cpp  parser.hpp  symbols.cpp  symbols.hpp
src/parser/productions/: base.hpp  productions.cpp  productions.hpp  tracer.cpp  tracer.hpp
src/parser/rules/: assignement_statement.cpp  assignement_statement.hpp  assignment_statement.cpp  assignment_statement.hpp  binary_expression.cpp  binary_expression.hpp  break_statement.cpp  break_statement.hpp  common.hpp  expression.cpp  expression.hpp  expression_tail.cpp  expression_tail.hpp  for_statement.cpp  for_statement.hpp  identifier.cpp  identifier.hpp  if_statement.cpp  if_statement.hpp  increment_expression.cpp  increment_expression.hpp  literal_expression.cpp  literal_expression.hpp  procedure_statement.cpp  procedure_statement.hpp  program.cpp  program.hpp  return_statement.cpp  return_statement.hpp  statement.cpp  statement.hpp  statement_list.cpp  statement_list.hpp  statement_tail.cpp  statement_tail.hpp  symbols.hpp  term.cpp  term.hpp  unary_expression.cpp  unary_expression.hpp  (+2 more)
src/semantic/: decorator.cpp  decorator.hpp
src/utils/: string_utils.cpp  string_utils.hpp
